--- a/index.html
+++ b/index.html
@@ -1,2 +1,64 @@
 <!--웹사이트의 기본 구조와 내용-->
 
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>얼굴 인식 출석 관리 시스템</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>얼굴 인식 출석 관리 시스템</h1>
+        </header>
+        
+        <nav>
+            <button onclick="showSection('register')">사용자 등록</button>
+            <button onclick="showSection('attendance')">출석 확인</button>
+            <button onclick="showSection('dashboard')">대시보드</button>
+        </nav>
+
+        <main>
+            <!-- 사용자 등록 섹션 -->
+            <section id="register" class="section">
+                <h2>사용자 등록</h2>
+                <form id="registerForm">
+                    <input type="text" name="name" placeholder="이름" required>
+                    <input type="text" name="studentId" placeholder="학번" required>
+                    <input type="tel" name="phone" placeholder="전화번호" required>
+                    <input type="date" name="birthdate" required>
+                    <input type="file" name="faceImage" accept="image/*" required>
+                    <button type="submit">등록하기</button>
+                </form>
+            </section>
+
+            <!-- 출석 확인 섹션 -->
+            <section id="attendance" class="section hidden">
+                <h2>출석 확인</h2>
+                <form id="attendanceForm">
+                    <input type="file" name="faceImage" accept="image/*" required>
+                    <button type="submit">출석하기</button>
+                </form>
+            </section>
+
+            <!-- 대시보드 섹션 -->
+            <section id="dashboard" class="section hidden">
+                <h2>출석 현황</h2>
+                <div class="dashboard-content">
+                    <div class="stats">
+                        <p>오늘의 출석률: <span id="todayAttendance">0</span>%</p>
+                        <p>전체 등록 인원: <span id="totalStudents">0</span>명</p>
+                    </div>
+                    <div class="attendance-list">
+                        <h3>출석자 명단</h3>
+                        <ul id="attendanceList"></ul>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
